--- a/references.bib
+++ b/references.bib
@@ -397,3 +397,40 @@ archivePrefix = "arXiv",
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+
+@ARTICLE{2009MNRAS.398.1150B,
+   author = {{Boylan-Kolchin}, M. and {Springel}, V. and {White}, S.~D.~M. and 
+	{Jenkins}, A. and {Lemson}, G.},
+    title = "{Resolving cosmic structure formation with the Millennium-II Simulation}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0903.3041},
+ primaryClass = "astro-ph.CO",
+ keywords = {methods: N-body simulations , galaxies: haloes , cosmology: theory},
+     year = 2009,
+    month = sep,
+   volume = 398,
+    pages = {1150-1164},
+      doi = {10.1111/j.1365-2966.2009.15191.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.398.1150B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2011MNRAS.413..101G,
+   author = {{Guo}, Q. and {White}, S. and {Boylan-Kolchin}, M. and {De Lucia}, G. and 
+	{Kauffmann}, G. and {Lemson}, G. and {Li}, C. and {Springel}, V. and 
+	{Weinmann}, S.},
+    title = "{From dwarf spheroidals to cD galaxies: simulating the galaxy population in a {$\Lambda$}CDM cosmology}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1006.0106},
+ keywords = {galaxies: haloes, galaxies: luminosity function, mass function, cosmology: theory, dark matter, large-scale structure of Universe},
+     year = 2011,
+    month = may,
+   volume = 413,
+    pages = {101-131},
+      doi = {10.1111/j.1365-2966.2010.18114.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.413..101G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
