--- a/paper.tex
+++ b/paper.tex
@@ -67,7 +67,7 @@ $^{8}$ Laboratoire Lagrange, Universi\'{e} de Nice Sophia-Antipolis, Centre Nati
 
 % Abstract of the paper
 \begin{abstract}
-The present the results of an open gravitational lens finding challenge.  Participants were asked to classify 100,000 candidate objects as to whether they were gravitational lenses or not with the goal of developing better automated methods for finding lenses in large data sets.   
+We present a description and results of an open gravitational lens finding challenge.  Participants were asked to classify 100,000 candidate objects as to whether they were gravitational lenses or not with the goal of developing better automated methods for finding lenses in large data sets.   
 \end{abstract}
 
 \begin{keywords}
@@ -96,8 +96,13 @@ The challenge was opened on November 25, 2016 and closed on February 5, 2017.
 \section{the simulations}
 \label{sec:simulation}
 
-Creating the mock images starts with a cosmological nbody simulation.  In this case it was the Millennium simulation \citep{***}.   A catalog of dark matter halos within a light-cone is 
-constructed within the Millennium Observatory project \citep{2013MNRAS.428..778O}.  Using the GLAMER lensing code \citep{2014MNRAS.445.1942M,2014MNRAS.445.1954P} we identify and map out all the caustics within the light-cone for *** source planes.  For every caustic that corresponded to a critical curve with an Einstein radius larger than **** arcseconds, we identify the main object causing lensing by finding the largest ****.  The Einstein radius is estimated here and in all that follows as $R_{\rm ein}=\sqrt{A_{\rm ein}/\pi}$ where $A_{\rm ein}$ is the angular area within the critical curve.  A **** square degree light-cone gives rise to **** such lenses.  All the halos within *** Mpc of this main lens are extracted and used as a lens.  This collection of halos is rotated to produce more random lenses.    In this way the lenses contain the all the subhalos and near by companion halos.
+Creating the mock images starts with a cosmological nbody simulation.  In this case it was the Millennium simulation \citep{2009MNRAS.398.1150B}.   A catalog of dark matter halos within a light-cone is constructed within the Millennium Observatory project \citep{2013MNRAS.428..778O} down to a mass of ****.   
+These halo catalog is read into the GLAMER lensing code \citep{2014MNRAS.445.1942M,2014MNRAS.445.1954P} to do all the ray-tracing.
+This code projects the halos onto lens planes, in this case 20, and finds the deflection angle on each plane by a hybrid tree method.  In this way the halos have the mass, concentration and clustering properties from the nbody simulation, but within each strong lens the mass resolution is not limited by the original simulation, but follows the analytic mass profile.  
+
+With GLAMER we identify and map out all the caustics within the light-cone for 33 source planes -- z=1 to 3 in intervals of 0.1 and 3 to 6 in intervals of 0.25.  We take every caustic that corresponded to a critical curve with an Einstein radius larger than 1.5 times the resolution.  The Einstein radius is estimated here and in all that follows as $R_{\rm ein}=\sqrt{A_{\rm ein}/\pi}$ where $A_{\rm ein}$ is the angular area within the critical curve.
+
+ A **** square degree light-cone gives rise to **** such caustics, but these over count the number of lenses since most will have caustics on multiple source planes.  These lenses could be used as is, but we want to produce a much larger number with more randomness.   For each caustic we identify the lens plane with the highest convergence and identify all the halos within a three dimensional distance of 0.5 Mpc from the center of the critical curve and on this and its neighboring lens planes.    This collection of halos is then used as the lens and rotated to produce more random lenses.    It  contains all the subhalos and near by companion halos, but not the large scale structure surrounding it.
 
 For lensed sources we use sources from the Hubble Ultra Deep Field (UDF) that have been decomposed into shapelet functions to remove noise.  This is the same set of images as used 
 in ***.   The source is placed within **** of the center of the lenses caustic as found in the initial ray tracing.  This is a somewhat arbitrary length designed to be a compromise between producing only very clear strong lenses because all the sources are right in the center of the caustic and making the proccess  inefficiently because most of the sources are too far away from the caustic to produce clear lenses.  If the source positions where taken completely at random the fraction of clear lenses would be very low.
@@ -106,7 +111,7 @@ in ***.   The source is placed within **** of the center of the lenses caustic a
 
 {\bf Lens Galaxies}
 
-There are not enough large galaxies in the UDF to make enough mock lens galaxies.  The Millennium Observatory provides parameters for the galaxies that inhabit the dark matter halos using the semi-analytic galaxy formation models of ****.  To model the surface brightness of these galaxies we use the models ****
+There are not enough large galaxies in the UDF to make enough mock lens galaxies.  The Millennium Observatory provides parameters for the galaxies that inhabit the dark matter halos using the semi-analytic galaxy formation models of \citet{2011MNRAS.413..101G}.  To model the surface brightness of these galaxies we use the models ****
 
 {\bf mass rendering}
 
