--- a/references.bib
+++ b/references.bib
@@ -325,29 +325,6 @@ url="http://dx.doi.org/10.1023/A:1009715923555"
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-@ARTICLE{2014A&A...566A..63J,
-   author = {{Joseph}, R. and {Courbin}, F. and {Metcalf}, R.~B. and {Giocoli}, C. and 
-	{Hartley}, P. and {Jackson}, N. and {Bellagamba}, F. and {Kneib}, J.-P. and 
-	{Koopmans}, L. and {Lemson}, G. and {Meneghetti}, M. and {Meylan}, G. and 
-	{Petkova}, M. and {Pires}, S.},
-    title = "{A PCA-based automated finder for galaxy-scale strong lenses}",
-  journal = {\aap},
-archivePrefix = "arXiv",
-   eprint = {1403.1063},
- primaryClass = "astro-ph.IM",
- keywords = {gravitational lensing: strong, techniques: image processing, methods: data analysis, dark matter, surveys, cosmological parameters},
-     year = 2014,
-    month = jun,
-   volume = 566,
-      eid = {A63},
-    pages = {A63},
-      doi = {10.1051/0004-6361/201423365},
-   adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...566A..63J},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @Book{Feichtinger98a,
   Title                    = {{Gabor} Analysis and Algorithms},
   Annote                   = {SIGNATUR = 741.019},
@@ -374,7 +351,6 @@ archivePrefix = "arXiv",
 	pages = {1233--1258},
 	year = {1987},
 	publisher = {American Physiological Society},
-	abstract = {1. Using the two-dimensional (2D) spatial and spectral response profiles described in the previous two reports, we test Daugman{\textquoteright}s generalization of Marcelja{\textquoteright}s hypothesis that simple receptive fields belong to a class of linear spatial filters analogous to those described by Gabor and referred to here as 2D Gabor filters. 2. In the space domain, we found 2D Gabor filters that fit the 2D spatial response profile of each simple cell in the least-squared error sense (with a simplex algorithm), and we show that the residual error is devoid of spatial structure and statistically indistinguishable from random error. 3. Although a rigorous statistical approach was not possible with our spectral data, we also found a Gabor function that fit the 2D spectral response profile of each simple cell and observed that the residual errors are everywhere small and unstructured. 4. As an assay of spatial linearity in two dimensions, on which the applicability of Gabor theory is dependent, we compare the filter parameters estimated from the independent 2D spatial and spectral measurements described above. Estimates of most parameters from the two domains are highly correlated, indicating that assumptions about spatial linearity are valid. 5. Finally, we show that the functional form of the 2D Gabor filter provides a concise mathematical expression, which incorporates the important spatial characteristics of simple receptive fields demonstrated in the previous two reports. Prominent here are 1) Cartesian separable spatial response profiles, 2) spatial receptive fields with staggered subregion placement, 3) Cartesian separable spectral response profiles, 4) spectral response profiles with axes of symmetry not including the origin, and 5) the uniform distribution of spatial phase angles. 6. We conclude that the Gabor function provides a useful and reasonably accurate description of most spatial aspects of simple receptive fields. Thus it seems that an optimal strategy has evolved for sampling images simultaneously in the 2D spatial and spatial frequency domains.},
 	issn = {0022-3077},
 	URL = {http://jn.physiology.org/content/58/6/1233},
 	eprint = {http://jn.physiology.org/content/58/6/1233.full.pdf},
@@ -433,4 +409,111 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.413..101G},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2014A&A...566A..63J,
+   author = {{Joseph}, R. and {Courbin}, F. and {Metcalf}, R.~B. and {Giocoli}, C. and 
+	{Hartley}, P. and {Jackson}, N. and {Bellagamba}, F. and {Kneib}, J.-P. and 
+	{Koopmans}, L. and {Lemson}, G. and {Meneghetti}, M. and {Meylan}, G. and 
+	{Petkova}, M. and {Pires}, S.},
+    title = "{A PCA-based automated finder for galaxy-scale strong lenses}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1403.1063},
+ primaryClass = "astro-ph.IM",
+ keywords = {gravitational lensing: strong, techniques: image processing, methods: data analysis, dark matter, surveys, cosmological parameters},
+     year = 2014,
+    month = jun,
+   volume = 566,
+      eid = {A63},
+    pages = {A63},
+      doi = {10.1051/0004-6361/201423365},
+   adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...566A..63J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2007A&A...472..341S,
+   author = {{Seidel}, G. and {Bartelmann}, M.},
+    title = "{Arcfinder: an algorithm for the automatic detection of gravitational arcs}",
+  journal = {\aap},
+   eprint = {astro-ph/0607547},
+ keywords = {gravitational lensing, methods: data analysis, techniques: image processing},
+     year = 2007,
+    month = sep,
+   volume = 472,
+    pages = {341-352},
+      doi = {10.1051/0004-6361:20066097},
+   adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...472..341S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009ApJ...694..924M,
+   author = {{Marshall}, P.~J. and {Hogg}, D.~W. and {Moustakas}, L.~A. and 
+	{Fassnacht}, C.~D. and {Brada{\v c}}, M. and {Schrabback}, T. and 
+	{Blandford}, R.~D.},
+    title = "{Automated Detection of Galaxy-Scale Gravitational Lenses in High-Resolution Imaging Data}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0805.1469},
+ keywords = {galaxies: elliptical and lenticular, cD, gravitational lensing, methods: data analysis, methods: statistical, surveys, techniques: miscellaneous},
+     year = 2009,
+    month = apr,
+   volume = 694,
+    pages = {924-942},
+      doi = {10.1088/0004-637X/694/2/924},
+   adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...694..924M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010A&A...517A..25S,
+   author = {{Sygnet}, J.~F. and {Tu}, H. and {Fort}, B. and {Gavazzi}, R.
+	},
+    title = "{A search for edge-on galaxy lenses in the CFHT Legacy Survey}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1001.4336},
+ keywords = {gravitational lensing: strong, dark matter, galaxies: spiral, galaxies: halos},
+     year = 2010,
+    month = jul,
+   volume = 517,
+      eid = {A25},
+    pages = {A25},
+      doi = {10.1051/0004-6361/200913977},
+   adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...517A..25S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016A&A...592A..75P,
+   author = {{Paraficz}, D. and {Courbin}, F. and {Tramacere}, A. and {Joseph}, R. and 
+	{Metcalf}, R.~B. and {Kneib}, J.-P. and {Dubath}, P. and {Droz}, D. and 
+	{Filleul}, F. and {Ringeisen}, D. and {Sch{\"a}fer}, C.},
+    title = "{The PCA Lens-Finder: application to CFHTLS}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1605.04309},
+ keywords = {gravitational lensing: strong, galaxies: general, surveys},
+     year = 2016,
+    month = jul,
+   volume = 592,
+      eid = {A75},
+    pages = {A75},
+      doi = {10.1051/0004-6361/201527971},
+   adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...592A..75P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2013ExA....35...25D,
+   author = {{de Jong}, J.~T.~A. and {Verdoes Kleijn}, G.~A. and {Kuijken}, K.~H. and 
+	{Valentijn}, E.~A.},
+    title = "{The Kilo-Degree Survey}",
+  journal = {Experimental Astronomy},
+archivePrefix = "arXiv",
+   eprint = {1206.1254},
+ keywords = {Wide-field imaging, Survey system, VLT/VST, Weak gravitational lensing, Photometric redshifts},
+     year = 2013,
+    month = jan,
+   volume = 35,
+    pages = {25-44},
+      doi = {10.1007/s10686-012-9306-1},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ExA....35...25D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
